--- a/views/open.jade
+++ b/views/open.jade
@@ -7,12 +7,12 @@ block content
 		header
 			block header
 				include _header
-		nav.navBar
+		nav
 			block nav
 				include _nav
-		.content
+		.main-content
 			block main-content
-				include _inbox
+				include _
 		footer
 			block footer
 				include _footer
