--- a/views/_content_layout.jade
+++ b/views/_content_layout.jade
@@ -1,6 +1,5 @@
-block leftSidebar
-	.leftSidebar left sidebar
-block centerContent
-	.center center
-block rightSidebar
-	.rightSidebar right sidebar
+block content
+  .sidebar
+    block sidebar
+  .view
+    block view
