--- a/views/_tags.jade
+++ b/views/_tags.jade
@@ -1,6 +1,5 @@
 //Html for the list of popular tags
-ul.tags(data-bind= 'foreach: tags')
+ul.tags.sideBlock(data-bind= 'foreach: tags')
 	li
-		h3(data-bind= 'text: tag')
-		.count
-			span(data-bind= 'text: count')
+		span(data-bind= 'text: tag')
+		span(data-bind= 'text: count')
