--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,19 +1,18 @@
 doctype 5
 html
-	head
-		meta(charset='utf8')
-		meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
-		meta(name='description', content='Email Site')
-		meta(name='author', content= "Erica von Buelow")
-		block title
-			title Email
-		block style
-			link(rel='stylesheet', href='style.css')
-	body
-		block content
-		block scripts
-			script(src="js/knockout.js")
-			script(src="js/viewcontrollers/inbox.js")
-
-
+  head
+    meta(charset='utf8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
+    meta(name='description', content='Email Site')
+    meta(name='author', content= "Erica von Buelow")
+    title #{title}
+    block style
+      != css('inbox')
+    != js('jquery')
+    != js('effects')
+  body
+    block content
+    block scripts
+      != js('knockout')
+      != js('inbox')
 
